# docs/swagger.yaml
@@ -33,6 +33,19 @@ definitions:
     - title
     - user_id
     type: object
+  schema.BookListResponse:
+    properties:
+      count:
+        type: integer
+      data:
+        items:
+          $ref: '#/definitions/schema.Book'
+        type: array
+      limit:
+        type: integer
+      offset:
+        type: integer
+    type: object
   schema.CreateBook:
     properties:
       author:
@@ -144,6 +157,19 @@ definitions:
       username:
         type: string
     type: object
+  schema.UserListResponse:
+    properties:
+      count:
+        type: integer
+      data:
+        items:
+          $ref: '#/definitions/schema.User'
+        type: array
+      limit:
+        type: integer
+      offset:
+        type: integer
+    type: object
 info:
   contact: {}
   description: Fiber go web framework based REST API boilerplate
@@ -173,9 +199,7 @@ paths:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/schema.Book'
-            type: array
+            $ref: '#/definitions/schema.BookListResponse'
         "400":
           description: Error
           schema:
@@ -392,7 +416,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/schema.User'
+              $ref: '#/definitions/schema.UserListResponse'
             type: array
         "400":
           description: Error
